# kaskad-nuntius

./: .gitignore  .gitmodules  CLAUDE.md  Cargo.toml  Dockerfile  LICENSE  NOTICE  README.md  rust-toolchain.toml
.github/workflows/: ci.yml  deploy.yml  integration.yml  nitro-test.yml
audits/: kaspacom.md
config/: assets.json
contracts/: foundry.toml
contracts/broadcast/Deploy.s.sol/31337/: run-1773735347984.json  run-1773735383438.json  run-1773828578946.json  run-1773828678809.json  run-1773828707763.json  run-1773828720903.json  run-1773828769780.json  run-1773828783541.json  run-1773828903065.json  run-1773828922549.json  run-1774255632487.json  run-1774975298907.json  run-1774975425712.json  run-1774975588087.json  run-1774975637298.json  run-1774975664721.json  run-1774975705588.json
contracts/broadcast/DeployGalleon.s.sol/31337/: run-1775047852582.json  run-1775047874328.json  run-latest.json
contracts/broadcast/DeployGalleon.s.sol/38836/: run-1775048423848.json  run-1775048439779.json  run-latest.json
contracts/broadcast/DeployGalleonReal.s.sol/38836/: run-latest.json
contracts/broadcast/DeployReal.s.sol/38836/: run-latest.json
contracts/deployments/: galleon.json
contracts/script/: Deploy.s.sol  DeployGalleon.s.sol  DeployGalleonReal.s.sol  DeployLocal.s.sol  DeployReal.s.sol
contracts/src/: KaskadAggregatorV3.sol  KaskadPriceOracle.sol  KaskadRouter.sol  NitroAttestationVerifier.sol
contracts/test/: KaskadPriceOracle.t.sol  SecurityAudit.t.sol
contracts/test/mocks/: MockVerifiers.sol
docs/: CollectiveAuditRemediation.md  PRICE_PROCESSING_GUIDE.md  SECURITY_AUDIT_FINDINGS.md  architecture.md  audit_scope.md  nitro-deployment.md
enclave/: aws-creds-proxy.py  pull_api.py  test_pull_api.py  vsock-proxy.service  vsock_proxy.py
infra/: alb.tf  builder.tf  iam.tf  kms.tf  main.tf  monitoring.tf  network.tf  outputs.tf  prod.tf  s3.tf  terraform.tfvars.example  tfplan  user-data-builder.sh  user-data-prod.sh  variables.tf
relayer/: .env.example  package-lock.json  package.json  tsconfig.json
relayer/abi/: KaskadPriceOracle.json
relayer/src/: config.ts  e2e-submit.ts  index.ts  poll.ts  relay.ts  tx-queue.ts  types.ts
relayer/src/types/contracts/: index.ts  (+1 more)
scripts/: check_galleon.py  deploy_step_by_step.py  e2e_relayer.sh  e2e_test.sh  estimate_cert_manager.py  find_init_limit.py  find_limit.py  find_sequencer_limit.py  full_flow_test.sh  test_pull_api.sh  wait_proxy.sh
src/: aws_creds.rs  cob.rs  http_client.rs  main.rs  price_server.rs  publisher.rs  sealing.rs  signer.rs  types.rs  vsock_client.rs
src/aggregator/: mod.rs  robust.rs
src/sources/: binance.rs  bitfinex.rs  bitget.rs  bitstamp.rs  bybit.rs  coinbase.rs  coingecko.rs  crypto_com.rs  gateio.rs  governance.rs  htx.rs  igralabs.rs  kraken.rs  kucoin.rs  mexc.rs  mod.rs  okx.rs
tests/: security_audit.rs
(+2 files in other folders)
