[package]
name = "kaskad-oracle"
version = "0.1.0"
edition = "2021"

[dependencies]
# Async runtime
tokio = { version = "1", features = ["full"] }

# HTTP client for CEX APIs
reqwest = { version = "0.12", features = ["json"] }

# EVM types & signing 
alloy-primitives = "1"
alloy-sol-types = "1"
k256 = { version = "0.13", features = ["ecdsa"] }
sha3 = "0.10"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Error handling & logging
eyre = "0.6"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Config
dotenvy = "0.15"

# Time
chrono = "0.4"

# Async trait support
async-trait = "0.1"

# Hex encoding
hex = "0.4"

# Random key generation (dev)
rand = "0.8"

# VSOCK support (Linux only, for Nitro Enclave)
[target.'cfg(target_os = "linux")'.dependencies]
libc = "0.2"
aws-nitro-enclaves-nsm-api = "0.4"


[dev-dependencies]
tokio-test = "0.4"
